[gd_scene load_steps=6 format=3 uid="uid://bfc7nmxs6r00g"]

[ext_resource type="Script" uid="uid://5bg4aw7ppm3c" path="res://scenes/kiln/kiln.gd" id="1_54vod"]
[ext_resource type="PackedScene" uid="uid://bquoh0o3sb282" path="res://scenes/ui/backgrounds/animated_background.tscn" id="2_11imp"]
[ext_resource type="PackedScene" uid="uid://0ek8bcdoiphi" path="res://scenes/ui/party_ui.tscn" id="2_cs22t"]
[ext_resource type="Texture2D" uid="uid://cp13xdyr7y5js" path="res://assets/sprites/kiln/Kiln.png" id="2_tcpd7"]
[ext_resource type="PackedScene" uid="uid://i84sei2wbdf7" path="res://scenes/ui/unit_icon_panel.tscn" id="4_11imp"]

[node name="Kiln" type="Node2D"]
script = ExtResource("1_54vod")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]

[node name="AnimatedBackground" parent="BackgroundLayer" instance=ExtResource("2_11imp")]

[node name="Kiln" type="TextureRect" parent="BackgroundLayer"]
custom_minimum_size = Vector2(260, 180)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -128.0
offset_right = -71.0
offset_bottom = 52.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_tcpd7")
stretch_mode = 5

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="PartyUI" parent="UI/MarginContainer/HBoxContainer" instance=ExtResource("2_cs22t")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0

[node name="Control" type="Control" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
mouse_filter = 2

[node name="UnitIconPanel" parent="UI/MarginContainer/HBoxContainer/Control" instance=ExtResource("4_11imp")]
unique_name_in_owner = true
layout_mode = 2
offset_left = -176.0
offset_top = -239.0
offset_right = -128.0
offset_bottom = -191.0
size_flags_vertical = 4
mouse_filter = 2

[node name="HealButton" type="Button" parent="UI/MarginContainer/HBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
offset_left = -226.0
offset_top = -104.0
offset_right = -76.0
offset_bottom = -72.0
theme_override_font_sizes/font_size = 16
text = "Heal 25%"

[node name="LeaveButton" type="Button" parent="UI/MarginContainer/HBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 32)
layout_mode = 2
offset_left = -40.0
offset_top = -26.0
offset_right = 40.0
offset_bottom = 6.0
theme_override_font_sizes/font_size = 16
text = "Leave"
